--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-opencv-python
+opencv-python>3.4.0.14<5.0.0
 augmentor
 pillow
-tensorflow_gpu==1.1.0
-numpy==1.13.1
-opencv_python==3.2.0.7
-matplotlib==2.0.2
-easydict==1.6
-tensorflow>=1.12.1
+tensorflow_gpu==1.13.1
+numpy==1.17
+matplotlib
+easydict
+tensorflow==1.13.1
